// CV-Adapter — modelo de dados. Ver docs/erd.md.
// MVP em SQLite; migra para Postgres trocando o provider + DATABASE_URL (ADR-0005).
// Campos que guardam JSON (bullets, techStack, *Json, etc.) são String contendo JSON
// serializado — portável em SQLite; na migração para Postgres podem virar Json/jsonb.

datasource db {
  provider = "sqlite"
  url      = env("DATABASE_URL")
}

generator client {
  provider = "prisma-client-js"
}

model User {
  id        String   @id @default(cuid())
  email     String?  @unique
  createdAt DateTime @default(now())

  profile          Profile?
  experiences      Experience[]
  educations       Education[]
  skills           Skill[]
  projects         Project[]
  languages        Language[]
  courses          Course[]
  jobPostings      JobPosting[]
  generatedResumes GeneratedResume[]
}

model Profile {
  id        String   @id @default(cuid())
  userId    String   @unique
  user      User     @relation(fields: [userId], references: [id], onDelete: Cascade)
  fullName  String
  phone     String?
  location  String?
  email     String?
  linkedin  String?
  github    String?
  website   String?
  summary   String?
  updatedAt DateTime @updatedAt

  experiences Experience[]
  educations  Education[]
  skills      Skill[]
  projects    Project[]
  languages   Language[]
  courses     Course[]
}

model Experience {
  id        String  @id @default(cuid())
  userId    String
  user      User    @relation(fields: [userId], references: [id], onDelete: Cascade)
  profileId String
  profile   Profile @relation(fields: [profileId], references: [id], onDelete: Cascade)
  company   String
  role      String
  location  String?
  startDate String
  endDate   String?
  current   Boolean @default(false)
  bullets   String  @default("[]") // JSON: string[]
  order     Int     @default(0)

  @@index([userId])
}

model Education {
  id          String  @id @default(cuid())
  userId      String
  user        User    @relation(fields: [userId], references: [id], onDelete: Cascade)
  profileId   String
  profile     Profile @relation(fields: [profileId], references: [id], onDelete: Cascade)
  institution String
  degree      String
  field       String?
  startDate   String
  endDate     String?
  gpa         String?
  details     String?
  order       Int     @default(0)

  @@index([userId])
}

model Skill {
  id        String  @id @default(cuid())
  userId    String
  user      User    @relation(fields: [userId], references: [id], onDelete: Cascade)
  profileId String
  profile   Profile @relation(fields: [profileId], references: [id], onDelete: Cascade)
  category  String
  name      String
  level     String?
  order     Int     @default(0)

  @@index([userId])
}

model Project {
  id          String  @id @default(cuid())
  userId      String
  user        User    @relation(fields: [userId], references: [id], onDelete: Cascade)
  profileId   String
  profile     Profile @relation(fields: [profileId], references: [id], onDelete: Cascade)
  name        String
  description String
  bullets     String  @default("[]") // JSON: string[]
  techStack   String  @default("[]") // JSON: string[]
  url         String?
  order       Int     @default(0)

  @@index([userId])
}

model Language {
  id          String  @id @default(cuid())
  userId      String
  user        User    @relation(fields: [userId], references: [id], onDelete: Cascade)
  profileId   String
  profile     Profile @relation(fields: [profileId], references: [id], onDelete: Cascade)
  name        String
  proficiency String
  order       Int     @default(0)

  @@index([userId])
}

model Course {
  id        String  @id @default(cuid())
  userId    String
  user      User    @relation(fields: [userId], references: [id], onDelete: Cascade)
  profileId String
  profile   Profile @relation(fields: [profileId], references: [id], onDelete: Cascade)
  title     String
  issuer    String
  date      String
  url       String?
  order     Int     @default(0)

  @@index([userId])
}

model JobPosting {
  id             String   @id @default(cuid())
  userId         String
  user           User     @relation(fields: [userId], references: [id], onDelete: Cascade)
  rawText        String
  title          String?
  company        String?
  parsedKeywords String? // JSON
  createdAt      DateTime @default(now())

  generatedResumes GeneratedResume[]

  @@index([userId])
}

model GeneratedResume {
  id                 String      @id @default(cuid())
  userId             String
  user               User        @relation(fields: [userId], references: [id], onDelete: Cascade)
  mode               String // "STANDARD" | "JOB_ADAPTIVE"
  jobPostingId       String?
  jobPosting         JobPosting? @relation(fields: [jobPostingId], references: [id], onDelete: SetNull)
  modelId            String
  contentJson        String // JSON: ResumeContent validado
  texOutput          String // o .tex renderizado (cache)
  traceabilityReport String? // JSON
  createdAt          DateTime    @default(now())

  @@index([userId])
}
